initialize a variable that gcc warns about

https://bugzilla.gnome.org/show_bug.cgi?id=613749